--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,24 @@ apt:
     - google-chrome-beta
 
 before_install:
-  - export CHROME_BIN=chromium-browser
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+
+install:
+- wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+- bash miniconda.sh -b -p $HOME/miniconda
+- export PATH="$HOME/miniconda/bin:$PATH"
+- hash -r
+- conda config --set always_yes yes --set changeps1 no
+- conda update -q conda
+- conda info -a
+- conda create -q -n test-environment python=3.5 pip
+- source activate test-environment
+- conda config --add channels conda-forge
+- conda install cython numpy pandas click astropy healpy
+- pip install git+https://github.com/gammapy/gammapy.git#egg=gammapy
+
 
 before_script:
 - npm install -g angular-cli
@@ -26,8 +41,9 @@ before_script:
 - npm install
 - ng build
 
-script: karma start config/karma.conf.js --single-run
-
+script:
+- karma start config/karma.conf.js --single-run
+- python make.py --help
 
 # We use conda to install the Python dependencies
 # following the instructions here:
