--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 
 # IDEs and editors
 /.idea
+.project
+.classpath
+*.launch
+.settings/
 
 # misc
 /.sass-cache
@@ -26,6 +30,4 @@ testem.log
 
 #System Files
 .DS_Store
-
-.vscode
-__pycache__
+Thumbs.db
