--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,8 @@ before_script:
 - npm install -g karma
 - npm install
 - ng build
+- ng e2e
+- ng test
 
 script:
 - karma start config/karma.conf.js --single-run
