--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.18",
+    "angular-cli": "^1.0.0-beta.26",
     "codelyzer": "1.0.0-beta.1",
     "css-loader": "^0.25.0",
     "jasmine-core": "2.4.1",
