--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "angular-cli": "^1.0.0-beta.22-1",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.1.16",
     "ng2-select": "^1.1.1",
