--- a/package.json
+++ b/package.json
@@ -13,23 +13,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/common": "4.2.5",
+    "@angular/compiler": "4.2.5",
+    "@angular/core": "4.2.5",
+    "@angular/forms": "4.2.5",
+    "@angular/http": "4.2.5",
+    "@angular/platform-browser": "4.2.5",
+    "@angular/platform-browser-dynamic": "4.2.5",
+    "@angular/platform-server": "4.2.5",
+    "@angular/router": "4.2.5",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.3.2",
     "ng2-select": "^1.2.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "typescript": "2.4.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/compiler-cli": "4.2.5",
     "@types/jasmine": "2.5.41",
     "@types/node": "^7.0.4",
     "angular-cli": "1.0.0-beta.26",
