--- a/.travis.yml
+++ b/.travis.yml
@@ -36,13 +36,15 @@ install:
 
 
 before_script:
-- npm install -g angular-cli
+- npm install -g @angular/cli
 - npm install -g karma
 - npm install
-- ng build
-- ng e2e
+- ls -lh
 
 script:
+- ng build
+- ng serve
+- ng e2e
 - karma start config/karma.conf.js --single-run
 - python make.py --help
 
