--- a/.travis.yml
+++ b/.travis.yml
@@ -41,10 +41,13 @@ before_script:
 - npm install
 
 script:
+- python make.py fetch-data
+- ls input_data/
+#- python make.py test-dataset
 - ng build
 - ng e2e
 - karma start config/karma.conf.js --single-run
-- python make.py --help
+
 
 # We use conda to install the Python dependencies
 # following the instructions here:
