--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # input data files for webpage build
-input_data/3fhl.fits.gz
-input_data/3fgl.fits.gz
-input_data/gammacat.fits.gz
+input_data
 
 # static data
 /src/data
