--- a/package.json
+++ b/package.json
@@ -15,23 +15,24 @@
   "dependencies": {
     "@angular/animations": "^4.3.1",
     "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "4.2.5",
-    "@angular/compiler": "4.2.5",
-    "@angular/core": "4.2.5",
-    "@angular/forms": "4.2.5",
-    "@angular/http": "4.2.5",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/compiler-cli": "^4.3.1",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
     "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "4.2.5",
-    "@angular/platform-browser-dynamic": "4.2.5",
-    "@angular/platform-server": "4.2.5",
-    "@angular/router": "4.2.5",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/platform-server": "^4.3.1",
+    "@angular/router": "^4.3.1",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "ng2-select-compat": "^1.3.1",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.4.1",
     "ts-helpers": "^1.1.1",
-    "typescript": "2.4.0",
+    "typescript": "^2.4.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
