--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.4.1",
     "ts-helpers": "^1.1.1",
-    "typescript": "^2.4.2",
+    "typescript": "^2.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/animations": "^4.2.5",
     "@angular/cli": "^1.2.0",
     "@angular/compiler-cli": "4.2.5",
-    "@types/jasmine": "2.5.41",
+    "@types/jasmine": "^2.5.41",
     "@types/node": "^7.0.4",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
@@ -53,6 +53,6 @@
     "protractor": "~5.1.0",
     "ts-node": "2.0.0",
     "tslint": "^4.0.2",
-    "typescript": "~2.1.5"
+    "typescript": "^2.4.0"
   }
 }
