--- a/package.json
+++ b/package.json
@@ -38,21 +38,21 @@
     "@angular/animations": "^4.2.5",
     "@angular/cli": "^1.2.0",
     "@angular/compiler-cli": "4.2.5",
-    "@types/jasmine": "^2.5.41",
-    "@types/node": "^7.0.4",
-    "codelyzer": "~2.0.0-beta.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "1.4.1",
+    "@types/jasmine": "^2.5.53",
+    "@types/node": "^8.0.14",
+    "codelyzer": "^3.1.2",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
+    "karma": "^1.7.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.4.0",
+    "karma-remap-istanbul": "^0.6.0",
     "protractor": "~5.1.0",
-    "ts-node": "2.0.0",
-    "tslint": "^4.0.2",
-    "typescript": "^2.4.0"
+    "ts-node": "^3.2.1",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.2"
   }
 }
